[package]
name = "kvs"
version = "0.1.0"
authors = ["Xinyu Tan <txypotato@gmail.com>"]
description = "A key-value store"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.15", features = ["cargo"] }
structopt = "0.3.26"
failure = "0.1.8"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"
tempfile = "3.3.0"
walkdir = "2.3.2"
