[package]
name = "kvs"
version = "0.1.0"
authors = ["Xinyu Tan <txypotato@gmail.com>"]
description = "A key-value store"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.15", features = ["cargo"] }
structopt = "0.3.26"
failure = "0.1.8"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
log = "0.4.17"
env_logger = "0.9.0"
sled = "0.34.7"
dashmap = "5.3.4"
num_cpus = "1.13.1"
rayon = "1.5.3"

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"
tempfile = "3.3.0"
walkdir = "2.3.2"
criterion = { version = "0.3.6", features = ["html_reports"] }
rand = "0.8.5"
panic-control = "0.1.4"
crossbeam-utils = "0.8.11"

[[bench]]
name = "engine"
harness = false

[[bench]]
name = "thread_pool"
harness = false

